kustomize/overlay/staging/newmusatestproject-staging-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-egress-and-limited-ingress
  namespace: newmusatestproject-staging
  labels:
    organizationId: org_214f8824-489e-4427-b043-83252b36ac2b
    projectId: project_e045038e-659d-446f-80a4-9ea25944f637
    environmentId: env_75e62edf-5d20-47a8-9e6f-f9e496e7491c
spec:
  podSelector: {}
  egress:
    - {}
  policyTypes:
    - Egress
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              environmentId: env_75e62edf-5d20-47a8-9e6f-f9e496e7491c
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: skyu-system
    - from:
        - namespaceSelector:
            matchLabels:
              role: ingress
    - from:
        - namespaceSelector:
            matchLabels:
              role: observability
